(library
 (public_name hashcons)
 (modules hashcons))

(test
 (name test)
 (modules test)
 (libraries hashcons))

(test
 (name rule110)
 (modules rule110)
 (deps quicksort.term)
 (libraries hashcons))

(test
 (name test_qs)
 (modules test_qs)
 (flags ())
 (deps quicksort.term)
 (libraries hashcons))
